added admin api and minio admin

--- a/.env.template
+++ b/.env.template
@@ -6,9 +6,23 @@ KAFKA_URL
 MINIO_ACCESS_KEY
 MINIO_SECRET_KEY
 MERCADO_PAGO_ACCESS_TOKEN
+APP_API_URL
+KAFKA_BROKER
 OLLAMA_MODEL
 OLLAMA_IP
+KAFKA_BROKER_DOCKER
 OLLAMA_IP_DOCKER
-APP_API_URL
 MINIO_URL_DOCKER
 ADMIN_API
+API_GATEWAY_URL
+SECURE
+MINIO_ADDRESS
+MINIO_ROOT_USER
+MINIO_ROOT_PASSWORD
+MINIO_FOLDER_LOCATION
+MINIO_URL_ADMIN
+MINIO_PORT
+
+
+TTS_RVC_IMAGE=ghcr.io/reels-automation/tts-rvc:main 
+#Como la imagen tarda mucho en descargar, se puede buildear localmente y poner : tts-rvc-tts-rvc (o el nombre con el que se la haya buildeado)
