updated .env.template + create_networks.sh added

--- a/.env.template
+++ b/.env.template
@@ -1,27 +1,37 @@
-DATABASE_URL
-JWT_KEY
-MINIO_URL
-MONGO_URL
-KAFKA_URL
-MINIO_ACCESS_KEY
-MINIO_SECRET_KEY
-MERCADO_PAGO_ACCESS_TOKEN
-APP_API_URL
-KAFKA_BROKER
-OLLAMA_MODEL
-OLLAMA_IP
-KAFKA_BROKER_DOCKER
-OLLAMA_IP_DOCKER
-MINIO_URL_DOCKER
-ADMIN_API
-API_GATEWAY_URL
-SECURE
-MINIO_ADDRESS
-MINIO_ROOT_USER
-MINIO_ROOT_PASSWORD
-MINIO_FOLDER_LOCATION
-MINIO_URL_ADMIN
-MINIO_PORT
+DATABASE_URL=TU_URL_DE_POSTGRES
+JWT_KEY=TU_JWT_KEY
+
+# MinIO
+
+MINIO_PUBLIC_URL=minio:9000
+MINIO_PUBLIC_ACCESS_KEY=TU_PUBLIC_ACCESS_KEY_MINIO
+MINIO_PUBLIC_SECRET_KEY=TU_PUBLIC_SECRET_KEY_MINIO
+MINIO_ADMIN_FILES_ACCESS_KEY=TU_ADMIN_FILES_ACCESS_KEY_MINIO
+MINIO_ADMIN_FILES_SECRET_KEY=TU_ADMIN_FILES_SECRET_KEY_MINIO
+MINIO_ADMIN_FILES_FOLDER_LOCATION=TU_DIRECTORIO_ADMIN_FILES_MINIO
+MINIO_ADMIN_FILES_URL_ADMIN=minio-admin-files
+MINIO_ADMIN_FILES_PORT=9000
+
+# Kafka
+
+KAFKA_URL=broker:9093
+
+# Ollama
+
+OLLAMA_MODEL=MODELO_OLLAMA
+OLLAMA_IP=http://localhost:11434/api/generate
+OLLAMA_IP_DOCKER=http://ollama:11434/api/generate
+
+# DB
+
+MONGO_URL=mongodb://mongodb:27017
+
+MERCADO_PAGO_ACCESS_TOKEN=
+APP_API_URL=http://127.0.0.1:7080
+
+ADMIN_API=http://api-minio-admin:9999/
+API_GATEWAY_URL="http://api_gateway:7080/"
+SECURE=False
 
 
 TTS_RVC_IMAGE=ghcr.io/reels-automation/tts-rvc:main 
