--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -116,6 +116,21 @@ services:
       - 9003:9001
     networks:
       - minio-admin-files
+
+  createbuckets-admin-files:
+    image: minio/minio:latest
+    container_name: createbuckets-admin-files
+    depends_on:
+      - minio-admin-files
+    restart: on-failure
+    networks:
+      - minio-admin-files
+    environment:
+      - MINIO_ADMIN_FILES_ACCESS_KEY=${MINIO_ADMIN_FILES_ACCESS_KEY}
+      - MINIO_ADMIN_FILES_SECRET_KEY=${MINIO_ADMIN_FILES_SECRET_KEY}
+    volumes:
+      - ./create_minio_admin_bucket.sh:/create_minio_admin_bucket.sh:ro
+    entrypoint: /bin/sh /create_minio_admin_bucket.sh
   
   api-minio-admin:
     image: ghcr.io/reels-automation/admin-api:main
