added BUCKETS env variable to admin-api

--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,8 @@ MINIO_ADMIN_FILES_SECRET_KEY=TU_ADMIN_FILES_SECRET_KEY_MINIO
 MINIO_ADMIN_FILES_FOLDER_LOCATION=TU_DIRECTORIO_ADMIN_FILES_MINIO
 MINIO_ADMIN_FILES_URL_ADMIN=minio-admin-files
 MINIO_ADMIN_FILES_PORT=9000
+BUCKETS_ADMIN_FILES='["personajes-images-homero", "personajes-images-peter-griffin", "voice-models", "vosk-models", "test-bucket", "test"]'
+
 
 # Kafka
 
