--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -141,6 +141,7 @@ services:
       MINIO_FOLDER_LOCATION: ${MINIO_ADMIN_FILES_FOLDER_LOCATION}
       MINIO_URL: ${MINIO_ADMIN_FILES_URL_ADMIN}
       MINIO_PORT: ${MINIO_ADMIN_FILES_PORT}
+      BUCKETS: ${BUCKETS_ADMIN_FILES}
     ports:
         - "9999:9999"
     networks:
