removed infrastructure containers

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-DATABASE_URL=TU_URL_DE_POSTGRES
+DATABASE_URL=TU_URL_DE_POSTGRES #Como es asincrónica, debe empezar así: postgresql+asyncpgtambien es necesario borrar sslmode de la url.
 JWT_KEY=TU_JWT_KEY
 
 # MinIO
@@ -6,14 +6,6 @@ JWT_KEY=TU_JWT_KEY
 MINIO_PUBLIC_URL=minio:9000
 MINIO_PUBLIC_ACCESS_KEY=TU_PUBLIC_ACCESS_KEY_MINIO
 MINIO_PUBLIC_SECRET_KEY=TU_PUBLIC_SECRET_KEY_MINIO
-
-MINIO_ADMIN_FILES_ACCESS_KEY=TU_ADMIN_FILES_ACCESS_KEY_MINIO
-MINIO_ADMIN_FILES_SECRET_KEY=TU_ADMIN_FILES_SECRET_KEY_MINIO
-MINIO_ADMIN_FILES_FOLDER_LOCATION=TU_DIRECTORIO_ADMIN_FILES_MINIO
-MINIO_ADMIN_FILES_URL_ADMIN=minio-admin-files
-MINIO_ADMIN_FILES_PORT=9000
-BUCKETS_ADMIN_FILES='["personajes-images-homero", "personajes-images-peter-griffin", "voice-models", "vosk-models", "test-bucket", "test"]'
-
 
 # Kafka
 
