added temporary variable because tts didnt work

--- a/.env.template
+++ b/.env.template
@@ -26,6 +26,7 @@ APP_API_URL=http://127.0.0.1:7080
 
 ADMIN_API=http://api-minio-admin:9999/
 API_GATEWAY_URL="http://api_gateway:7080/"
+DOP=http://api-minio-admin:9999
 SECURE=False
 
 
