added public sign url

--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,7 @@ JWT_KEY=TU_JWT_KEY
 MINIO_PUBLIC_URL=minio:9000
 MINIO_PUBLIC_ACCESS_KEY=TU_PUBLIC_ACCESS_KEY_MINIO
 MINIO_PUBLIC_SECRET_KEY=TU_PUBLIC_SECRET_KEY_MINIO
-
+MINIO_PUBLIC_URL_SIGN_FILES=TU_IP_HOST_DE_MINIO:PUERTO
 # Kafka
 
 KAFKA_URL=broker:9093
