--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       MERCADO_PAGO_ACCESS_TOKEN: ${MERCADO_PAGO_ACCESS_TOKEN}
       MINIO_ACCESS_KEY: ${MINIO_PUBLIC_ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO_PUBLIC_SECRET_KEY}
+      MINIO_PUBLIC_URL_SIGN_FILES: ${MINIO_PUBLIC_URL_SIGN_FILES}
     container_name: api_gateway
     restart: unless-stopped
     user: $UID:$GID
@@ -96,6 +97,9 @@ services:
         SECURE: ${SECURE}
         ENVIRONMENT: ${ENVIRONMENT}
         ADMIN_API: ${ADMIN_API}
+        PUBLIC_MINIO_ACCESS_KEY: ${MINIO_PUBLIC_ACCESS_KEY}
+        PUBLIC_MINIO_SECRET_KEY: ${MINIO_PUBLIC_SECRET_KEY}
+
       stdin_open: true   
       tty: true
       restart: unless-stopped
