--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,7 +56,7 @@ services:
       MINIO_ADDRESS: ${MINIO_PUBLIC_URL}
       MINIO_ACCESS_KEY: ${MINIO_PUBLIC_ACCESS_KEY}
       MINIO_SECRET_KEY: ${MINIO_PUBLIC_SECRET_KEY}
-      ADMIN_API: ${DOP}
+      ADMIN_API: ${ADMIN_API_NO_BACKSLASH}
     restart: always
     networks:
       - local-kafka
@@ -96,7 +96,7 @@ services:
         MINIO_URL: ${MINIO_PUBLIC_URL}
         SECURE: ${SECURE}
         ENVIRONMENT: ${ENVIRONMENT}
-        ADMIN_API: ${ADMIN_API}
+        ADMIN_API: ${ADMIN_API_NO_BACKSLASH}
         PUBLIC_MINIO_ACCESS_KEY: ${MINIO_PUBLIC_ACCESS_KEY}
         PUBLIC_MINIO_SECRET_KEY: ${MINIO_PUBLIC_SECRET_KEY}
 
