changed compose and env

--- a/.env.template
+++ b/.env.template
@@ -14,9 +14,9 @@ KAFKA_URL=broker:9093
 # Ollama
 
 OLLAMA_MODEL=MODELO_OLLAMA
-OLLAMA_IP=http://localhost:11434/api/generate
+OLLAMA_IP=http://localhost:7869/api/generate
 OLLAMA_IP_DOCKER=http://ollama:11434/api/generate
-
+OLLAMA_IP_API=http://localhost:7869/
 # DB
 
 MONGO_URL=mongodb://mongodb:27017
